Updated CacheRegistryImpl to retrieve a copy of all existing cache names, rather than get a direct reference.